--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,8 +6,8 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: '39 9 * * *'
+#  schedule:
+#    - cron: '39 9 * * *'
   push:
     branches: [ "master" ]
     # Publish semver tags as releases.
